# cgr_graphlab

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
config/: localization_parameters.cfg
maps/: atlas.txt
maps/GHC7CUT/: GHC7CUT_vector.txt
maps/HALFCVAP7/: HALFCVAP7_vector.txt
src/cgr/: localization_main.cpp  vectorparticlefilter.cpp  vectorparticlefilter.h
